# m740recon

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: example.m740  nx1020_printpath.dot
m740dasm/: command.py  control.py  devices.py  disasm.py  listing.py  memory.py  report.py  symbols.py  trace.py
m740dasm/tests/: asmchain.py  device_snapshot.json  fixtures.py  reassemble.py  test_analyze.py  test_autotables.py  test_control.py  test_devices.py  test_end_to_end_as740.py  test_example.py  test_golden.py  test_report.py  test_roundtrip.py  test_symbols.py  test_xref.py
m740dasm/tests/golden/: example_listing.asm  zeropage.asm
m740recon/: command.py  control.py  devices.py  disasm.py  report.py  trace.py
m740recon/tests/: asmchain.py  reassemble.py  test_analyze.py  test_autotables.py  test_control.py  test_devices.py  test_disasm.py  test_end_to_end_as740.py  test_example.py  test_golden.py  test_report.py  test_roundtrip.py  test_symbols.py  test_xref.py
m740recon/tests/end_to_end/: Makefile  README.md
m740recon/tests/golden/: snapshot.asm
