[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["m740recon*"]

[project]
name = "m740recon"
version = "1.0.0"
description = "Advanced disassembler and analyzer for Renesas (Mitsubishi) 740 microcontrollers"
authors = [
    { name = "Keith Monahan", email = "keith@techtravels.org" }
]
maintainers = [
    { name = "Keith Monahan", email = "keith@techtravels.org" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Assembly",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
m740recon = "m740recon.command:main"

[project.urls]
Homepage = "https://github.com/keithgh1/m740recon"
Repository = "https://github.com/keithgh1/m740recon"
Original = "https://github.com/mnaberez/m740dasm"
